--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-- ~~Add multi-version support~~
+- <del>Add multi-version support</del>
 - Implement more customisation
 - Iron out any bugs that may arise
